--- a/static/styles/teams/team.scss
+++ b/static/styles/teams/team.scss
@@ -7,7 +7,7 @@
     }
   }
   @media (max-width: 1600px) {
-    .files, .events-card {
+    .files {
       .col-xs-3 {
         flex: 0 0 33.33333%;
         max-width: 33.33333%;
@@ -20,7 +20,6 @@
   }
   @media (max-width: 1300px) {
     .section-news .sc-card-wrapper,
-    .events-card,
     .files > .row > [class^="col-"] {
       width: 50%;
       flex: 0 0 50%;
@@ -29,7 +28,6 @@
   }
   @media (max-width: 1100px) {
     .section-news .sc-card-wrapper,
-    .events-card,
     .files > .row > [class^="col-"] {
       width: 100%;
       flex: 0 0 100%;
@@ -43,7 +41,7 @@
     .section-members {
       margin-top: 2rem;
     }
-    .section-teams {
+    .section-teams-rocket {
       width: calc(100% - 350px);
     }
     .rocketchat {
@@ -85,6 +83,12 @@
   }
   .files {
     margin-bottom: 10px;
+  }
+}
+
+.section-team-members {
+  a.btn.disabled{
+    pointer-events: auto;
   }
 }
 
