--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -13,6 +13,9 @@
                                 </div>
                                 <a class="col-sm-10 title">
                                     {{this.name}}
+									{{#if this.size}}
+										<small style="float: right;" class="file-info" id="{{this._id}}"></small>
+									{{/if}}
                                 </a>
                             </div>
                             <div class="card-text">
@@ -41,37 +44,44 @@
                                 </a>
                                 {{/userHasPermission}}
 
-                                {{#if ../../canEditPermissions}}
-                                    <a href="#"
-                                    class="btn-file-share"
-                                    title="Datei teilen"
-                                    data-file-id="{{../this._id}}"
-                                    data-file-name="{{../this.name}}"
-                                    id="{{@index}}">
-                                        <i class="fa fa-share-alt"></i>
-                                    </a>
+								<a href="#"
+								class="btn-file-share"
+								title="Datei teilen"
+								data-file-id="{{../this._id}}"
+								data-file-name="{{../this.name}}"
+								id="{{@index}}">
+									<i class="fa fa-share-alt"></i>
+								</a>
 
-                                    <div class="popup-overlay" id="{{@index}}">
+								<div class="popup-overlay" id="{{@index}}">
 
-                                        <div class="popup-content" id="{{@index}}">
-                                            <a class="btn btn-secondary btn-file-share-view" data-file-id="{{../this._id}}" data-file-attribute="view" style="width: 100%">Bearbeiten</a>
-                                            <a class="btn btn-secondary btn-file-share-download" data-file-id="{{../this._id}}" data-file-attribute="download" style="width: 100%">Runterladen</a>
-                                            <a class="btn btn-secondary btn-file-share-close" style="width: 100%">Schließen</a>
-                                        </div>
-                                    </div>
-                                {{/if}}
+									<div class="popup-content" id="{{@index}}">
+										<a class="btn btn-secondary btn-file-share-view" data-file-id="{{../this._id}}" data-file-attribute="view" style="width: 100%">Bearbeiten</a>
+										<a class="btn btn-secondary btn-file-share-download" data-file-id="{{../this._id}}" data-file-attribute="download" style="width: 100%">Runterladen</a>
+										<a class="btn btn-secondary btn-file-share-close" style="width: 100%">Schließen</a>
+									</div>
+								</div>
 
-                                {{#userHasPermission "FILE_MOVE"}}
-                                <a href="#"
-                                   class="btn-file-move"
-                                   title="Datei verschieben"
-                                   data-file-path="{{../path}}"
-                                   data-file-id="{{../_id}}"
-                                   data-file-name="{{../name}}">
-                                    <i class="fa fa-share"></i>
-                                </a>
-                                {{/userHasPermission}}
+									{{#if ../this.userIsOwner}}
+										<a href="#"
+										class="btn-file-move"
+										title="Datei verschieben"
+										data-file-path="{{../path}}"
+										data-file-id="{{../_id}}"
+										data-file-name="{{../name}}">
+											<i class="fa fa-folder-open"></i>
+										</a>
+									{{/if}}
                                 {{/ifneq}}
+
+								<a
+									href="#"
+									class="btn-file-settings"
+									title="Dateiberechtigungen bearbeiten"
+									data-file-id="{{this._id}}"
+								>
+									<i class="fa fa-cogs"></i>
+								</a>
 
                                 {{#if ../canCreateFile}}
                                 {{#if this.isOfficeFile}}
@@ -87,14 +97,6 @@
                                     </a>
                                 {{/if}}
                                 {{/if}}
-
-                                <!--{{#if this.isOfficeFile}} todo: discuss just onClick or own button?
-                                <a href="/files/file/{{this._id}}/lool"
-                                    target="_blank"
-                                    data-method="lool">In LibreOffice öffnen</a>
-                                {{/if}}-->
-
-                                <small class="file-info" id="{{this._id}}"></small>
                             </div>
                         </div>
                     </div>
@@ -127,7 +129,13 @@
 
 {{#embed "lib/components/modal-form" class="share-modal"}}
     {{#content "fields"}}
-        {{> "files/forms/form-share-file" teamFiles=teamFiles}}
+        {{> "files/forms/form-share-file"}}
+    {{/content}}
+{{/embed}}
+
+{{#embed "lib/components/modal-form" class="permissions-modal"}}
+    {{#content "fields"}}
+        {{> "files/forms/form-file-permissions"}}
     {{/content}}
 {{/embed}}
 
