code cleanup, empty state for teams

--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -19,8 +19,6 @@
                     <input type="hidden" name="_method" data-force-value="true" value="{{method}}"/>
                 {{/if}}
 
-                <h4>Allgemeine Informationen</h4>
-
                 <div class="form-group">
                     <label>Name des Teams</label>
                     <input class="form-control" name="name" type="text" placeholder="A-Team" value="{{team.name}}"
@@ -28,7 +26,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Beschreibung des Teams</label>
+                    <label>Beschreibung des Teams (optional)</label>
                     <textarea class="form-control" name="description">{{team.description}}</textarea>
                 </div>
 
