--- a/views/teams/overview.hbs
+++ b/views/teams/overview.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-    <script type="text/javascript" defer src="/scripts/teamOverview.js"></script>
+        <script type="text/javascript" defer src="/scripts/teamOverview.js"></script>
     {{/content}}
     {{#content "styles" mode="append"}}
     {{/content}}
@@ -10,15 +10,8 @@
         <section class="section-courses">
             {{#if teams}}
                 {{> 'dashboard/components/card_section' section-id="teams" title="" content=teams link-text="Öffnen" additionalInfoName="memberCount"}}
-            {{else}}
-                <div class="col-xs-12">
-                    <p class="text-muted text-center">
-                        <span>Keine Teams.</span>
-                    </p>
-                </div>
             {{/if}}
 
-            
             {{#if teamInvitations}}
                 <h2>Einladungen</h2>
                 {{> 'dashboard/components/card_section' section-id="teamInvitations" title="" content=teamInvitations link-text="Akzeptieren"}}
@@ -28,7 +21,7 @@
             <div class="col-xs-12">
                 <div class="row padding-top">
                     <div class="col-sm-12">
-                        <a href="/teams/add" class="btn btn-add btn-primary">Team anlegen</a>
+                        <a href="/teams/add" class="btn btn-add btn-primary pull-right">Team anlegen</a>
                     </div>
                 </div>
             </div>
@@ -51,13 +44,6 @@
                     {{> "teams/forms/form-add-member"}}
                 {{/content}}
             {{/embed}}
-
-            {{#embed "lib/components/modal-form" class="import-modal"}}
-                {{#content "fields"}}
-                    {{> "courses/forms/form-import-course"}}
-                {{/content}}
-            {{/embed}}
-
         </section>
     {{/content}}
 {{/extend}}
