--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -1,32 +1,34 @@
 {{#extend "lib/default"}}
 
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <link rel="stylesheet" href="/styles/partner/partner.css"/>
-        <link rel="stylesheet" href="/styles/about/about.css"/>
-        <style>
-            header a[href='/about']{
-                background-color: #f8a41b;
-            }
-        </style>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/authentication/home.css" />
+<link rel="stylesheet" href="/styles/partner/partner.css" />
+<link rel="stylesheet" href="/styles/about/about.css" />
+<style>
+    header a[href='/about'] {
+        background-color: #f8a41b;
+    }
+</style>
+{{/content}}
 
-    {{#content "scripts" mode="append"}} 
-        <script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
-        <script src="/scripts/video-player/load-video-player.js" type="text/javascript" defer></script>
-        <script src="/scripts/about.js" type="text/javascript" defer></script>
-    {{/content}}
+{{#content "scripts" mode="append"}}
+<script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
+<script src="/scripts/video-player/load-video-player.js" type="text/javascript" defer></script>
+<script src="/scripts/about.js" type="text/javascript" defer></script>
+{{/content}}
 
-    {{#content "body"}}
-        {{#embed "lib/header"}}{{/embed}}
-        <div class="container">
-            <div class="card">
-                <div class="card-block">
-                    <div class="section-title"><h3>{{title}}</h3></div>
-                    {{#embed "about/about"}}{{/embed}}
-                </div>
+{{#content "body"}}
+{{#embed "lib/header"}}{{/embed}}
+<div class="container">
+    <div class="card">
+        <div class="card-block">
+            <div class="section-title">
+                <h1 class="h3">{{title}}</h1>
             </div>
+            {{#embed "about/about"}}{{/embed}}
         </div>
-        {{#embed "lib/extended_footer"}}{{/embed}}
-    {{/content}}
+    </div>
+</div>
+{{#embed "lib/extended_footer"}}{{/embed}}
+{{/content}}
 {{/extend}}
