--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -1,170 +1,168 @@
 {{#extend "lib/loggedin"}}
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/account/settings.css"/>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/account/settings.css" />
+{{/content}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="/scripts/settings.js" type="text/javascript" defer></script>
-    {{/content}}
+{{#content "scripts" mode="append"}}
+<script src="/scripts/settings.js" type="text/javascript" defer></script>
+{{/content}}
 
-    {{#content "page"}}
+{{#content "page"}}
 
-        {{message}}
-        {{error}}
+{{message}}
+{{error}}
 
-        <div class="route-account">
-            {{#unless sso}}
-            <form method="post">
-                {{#ifneq currentRole "Schüler"}}
-                <div class="form-group">
-                    <label>Vorname:</label>
-                    <input type="text" class="form-control" name="firstName" value="{{ ../currentUser.firstName }}">
-                </div>
-
-                <div class="form-group">
-                    <label>Nachname:</label>
-                    <input type="text" class="form-control" name="lastName" value="{{ ../currentUser.lastName }}">
-                </div>
-                {{/ifneq}}
-
-                <div class="form-group">
-                    <label>E-Mail-Adresse:</label>
-                    <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
-                </div>
-
-                <div class="form-group">
-                    <label>Aktuelles Passwort: <sup>*</sup></label>
-                    <input type="password" name="password" class="form-control"
-                        placeholder="***************" required>
-                </div>
-
-                {{#userHasPermission "PASSWORD_EDIT"}}
-                <div class="form-group">
-                    <label>Neues Passwort:</label>
-                    <input type="password" name="password_new" id="password_new" class="form-control"
-                        placeholder="***************"
-                        pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                        title="{{> "lib/forms/password-hint" plaintext=true}}">
-                </div>
-
-                <div class="form-group">
-                    <label>Neues Passwort wiederholen:</label>
-                    <input type="password" name="password_control" id="password_control"
-                        class="form-control" placeholder="***************"
-                        title="{{> "lib/forms/password-hint" plaintext=true}}">
-                </div>
-                {{/userHasPermission}}
-
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary"/>
-                </div>
-            </form>
-
-            <input type="hidden" name="userId" value="{{userId}}"/>
-
-            <span class="hint">
-                <span class="star-reference">*</span>
-                {{> "lib/forms/password-hint" plaintext=false style="display: inline;"}}
-            </span>
-            {{else}}
-            <div>
-                <div class="form-group">
-                    <label>Vorname</label>
-                    <input type="text" class="form-control" value="{{ currentUser.firstName }}" readonly>
-                </div>
-                <div class="form-group">
-                    <label>Nachname</label>
-                    <input type="text" class="form-control" value="{{ currentUser.lastName }}" readonly>
-                </div>
-                <div class="form-group">
-                    <label>E-Mail-Adresse</label>
-                    <input type="email" class="form-control" value="{{ currentUser.email }}" readonly>
-                </div>
-                <p class="warning">
-                    Deine Nutzerdaten werden von einem zentralen Identitätsmanagement (IDM)
-                    synchronisiert. Änderungen daran können nur in dem Ausgangssystem erfolgen (z.B. Schulserver),
-                    das den Daten im IDM zugrunde liegt. Bitte wende dich an den lokalen Administrator deiner Schule,
-                    um Änderungen an deinen Nutzerdaten vorzunehmen.
-                </p>
-            </div>
-            {{/unless}}
+<div class="route-account">
+    {{#unless sso}}
+    <form method="post">
+        {{#ifneq currentRole "Schüler"}}
+        <div class="form-group">
+            <label>Vorname:</label>
+            <input type="text" class="form-control" name="firstName" value="{{ ../currentUser.firstName }}">
         </div>
 
-        {{#if false}} <!-- the following is hidden until the feature is fixed -->
-            <div class="panel-group notification-div">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse1" class="collapse-toggle"><label>Benachrichtigungseinstellungen</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
-                    </h4>
-                    </div>
-                    <div id="collapse1" class="panel-collapse collapse">
+        <div class="form-group">
+            <label>Nachname:</label>
+            <input type="text" class="form-control" name="lastName" value="{{ ../currentUser.lastName }}">
+        </div>
+        {{/ifneq}}
 
-                        <div class="notification">
-                            {{#if device}}
-                                <table width="100%" cellpadding="5px">
-                                    <thead>
-                                    <th></th>
-                                    <th><label>Name</label></th>
-                                    <th><label>Typ</label></th>
-                                    <th><label>Betriebssystem</label></th>
-                                    </thead>
-                                    <tbody>
-                                    {{#each device}}
-                                        <tr id="{{this._id}}">
-                                            <td>{{#if this.selected}}<a href="/account/settings/device"
-                                                                        target="_blank"
-                                                                        data-method="delete"
-                                                                        data-device-name="{{this.name}}"
-                                                                        data-device-id="{{this.token}}">
-                                                <i class="fa fa-trash-o"></i></a>
-                                            {{/if}}</td>
-                                            <td class="form-group">{{this.name}}</td>
-                                            <td class="form-group">{{this.type}}</td>
-                                            <td class="form-group">{{this.OS}}</td>
-                                        </tr>
-                                    {{/each}}
-                                    </tbody>
-                                </table>
-                            {{else}}
-                                <h5 class="text-muted text-center">
-                                    <span>Keine Geräte eingetragen</span>
-                                </h5>
-                            {{/if}}
-                            <div class="panel-footer">
-                                <button type="button" class="btn btn-default btn-device"
-                                        onclick="pushManager.requestPermission()">
-                                    <i class="fa fa-bell" aria-hidden="true"></i>
-                                    Benachrichtigungen
-                                    aktivieren
-                                </button>
+        <div class="form-group">
+            <label>E-Mail-Adresse:</label>
+            <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
+        </div>
 
-                                <button type="button" class="btn btn-default send-test-notification">
-                                    <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                                    Test-Benachrichtigung
-                                    senden
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+        <div class="form-group">
+            <label>Aktuelles Passwort: <sup>*</sup></label>
+            <input type="password" name="password" class="form-control" placeholder="***************" required>
+        </div>
+
+        {{#userHasPermission "PASSWORD_EDIT"}}
+        <div class="form-group">
+            <label>Neues Passwort:</label>
+            <input type="password" name="password_new" id="password_new" class="form-control"
+                placeholder="***************"
+                pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+                title="{{> "lib/forms/password-hint" plaintext=true}}">
+        </div>
+
+        <div class="form-group">
+            <label>Neues Passwort wiederholen:</label>
+            <input type="password" name="password_control" id="password_control" class="form-control"
+                placeholder="***************" title="{{> "lib/forms/password-hint" plaintext=true}}">
+        </div>
+        {{/userHasPermission}}
+
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary" />
+        </div>
+    </form>
+
+    <input type="hidden" name="userId" value="{{userId}}" />
+
+    <span class="hint">
+        <span class="star-reference">*</span>
+        {{> "lib/forms/password-hint" plaintext=false style="display: inline;"}}
+    </span>
+    {{else}}
+    <div>
+        <div class="form-group">
+            <label>Vorname</label>
+            <input type="text" class="form-control" value="{{ currentUser.firstName }}" readonly>
+        </div>
+        <div class="form-group">
+            <label>Nachname</label>
+            <input type="text" class="form-control" value="{{ currentUser.lastName }}" readonly>
+        </div>
+        <div class="form-group">
+            <label>E-Mail-Adresse</label>
+            <input type="email" class="form-control" value="{{ currentUser.email }}" readonly>
+        </div>
+        <p class="warning">
+            Deine Nutzerdaten werden von einem zentralen Identitätsmanagement (IDM)
+            synchronisiert. Änderungen daran können nur in dem Ausgangssystem erfolgen (z.B. Schulserver),
+            das den Daten im IDM zugrunde liegt. Bitte wende dich an den lokalen Administrator deiner Schule,
+            um Änderungen an deinen Nutzerdaten vorzunehmen.
+        </p>
+    </div>
+    {{/unless}}
+</div>
+
+{{#if false}}
+<!-- the following is hidden until the feature is fixed -->
+<div class="panel-group notification-div">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="h4" class="panel-title">
+                <a data-toggle="collapse" href="#collapse1"
+                    class="collapse-toggle"><label>Benachrichtigungseinstellungen</label><i
+                        class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
+            </h2>
+        </div>
+        <div id="collapse1" class="panel-collapse collapse">
+
+            <div class="notification">
+                {{#if device}}
+                <table width="100%" cellpadding="5px">
+                    <thead>
+                        <th></th>
+                        <th><label>Name</label></th>
+                        <th><label>Typ</label></th>
+                        <th><label>Betriebssystem</label></th>
+                    </thead>
+                    <tbody>
+                        {{#each device}}
+                        <tr id="{{this._id}}">
+                            <td>{{#if this.selected}}<a href="/account/settings/device" target="_blank"
+                                    data-method="delete" data-device-name="{{this.name}}"
+                                    data-device-id="{{this.token}}">
+                                    <i class="fa fa-trash-o"></i></a>
+                                {{/if}}</td>
+                            <td class="form-group">{{this.name}}</td>
+                            <td class="form-group">{{this.type}}</td>
+                            <td class="form-group">{{this.OS}}</td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+                {{else}}
+                <h3 class="text-muted text-center h5">
+                    <span>Keine Geräte eingetragen</span>
+                </h3>
+                {{/if}}
+                <div class="panel-footer">
+                    <button type="button" class="btn btn-default btn-device" onclick="pushManager.requestPermission()">
+                        <i class="fa fa-bell" aria-hidden="true"></i>
+                        Benachrichtigungen
+                        aktivieren
+                    </button>
+
+                    <button type="button" class="btn btn-default send-test-notification">
+                        <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                        Test-Benachrichtigung
+                        senden
+                    </button>
                 </div>
             </div>
-        {{/if}}
+        </div>
+    </div>
+</div>
+{{/if}}
 
-        {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
-            {{#content "body"}}
+{{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+{{#content "body"}}
 
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-close">
-                        Abbrechen
-                    </button>
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary btn-close">
+        Abbrechen
+    </button>
 
-                    <button type="submit" class="btn btn-primary btn-submit">
-                        Löschen
-                    </button>
-                </div>
-            {{/content}}
-        {{/embed}}
+    <button type="submit" class="btn btn-primary btn-submit">
+        Löschen
+    </button>
+</div>
+{{/content}}
+{{/embed}}
 
-    {{/content}}
+{{/content}}
 {{/extend}}
