--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -40,7 +40,9 @@
                         <div class="form-group">
                             <label>
                                 <input type="checkbox" name="rocketchat" value="true" {{#inArray "rocketChat" ../school.features}}checked{{/inArray}}>
-                                Chatfunktion aktivieren*
+                                Chatfunktion aktivieren
+                                <p class="text-muted">Durch Ihren Klick auf „Chatfunktion aktivieren“ bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator und befugt sind,
+                                die Chat-Funktion für Ihre Schule freizuschalten. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
                             </label>
                         </div>
 
@@ -51,8 +53,6 @@
                                 {{#each ../provider}}
                                 <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}} </option>
                                     {{/each}} </select> </div> {{/if}} <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
-                             <p class="text-muted">Durch Ihren Klick auf „Chatfunktion aktivieren“ bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator und befugt sind,
-                                die Chat-Funktion für Ihre Schule freizuschalten. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
                     </form>
 
                     {{#if ../school.fileStorageType}}
