--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -13,7 +13,7 @@
 <div class="form-group">
     <label>Klasse(n) <small>(Nach dem Speichern werden alle Schüler automatisch hinzugefügt!)</small></label>
 
-    <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen" autocomplete="off">
+    <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
         {{#each classes}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>{{this.name}}</option>
         {{/each}}
@@ -23,7 +23,7 @@
 <div class="form-group">
     <label>Unterrichtender Lehrer</label>
 
-    <select name="teacherIds[]" multiple data-placeholder="Lehrer auswählen" autocomplete="off">
+    <select name="teacherIds[]" multiple data-placeholder="Lehrer auswählen">
         {{#each teachers}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                 {{#if this.displayName}}
@@ -38,7 +38,7 @@
 
 <div class="form-group">
     <label>Vertretungs Lehrer</label>
-    <select name="substitutionIds[]" multiple data-placeholder="Lehrer auswählen" autocomplete="off">
+    <select name="substitutionIds[]" multiple data-placeholder="Lehrer auswählen">
         {{#each substitutions}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                 {{this.firstName}} {{this.lastName}}
@@ -50,7 +50,7 @@
 <div class="form-group">
     <label>Schüler / Teilnehmer</label>
 
-    <select name="userIds[]" multiple data-placeholder="Schüler auswählen" autocomplete="off">
+    <select name="userIds[]" multiple data-placeholder="Schüler auswählen">
         {{#each students}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                 {{#if this.displayName}}
