--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -87,7 +87,7 @@
                 <div class="form-group col-md-6">
                     <label>Unterrichtender Lehrer</label>
 
-                    <select name="teacherIds[]" required multiple data-placeholder="Lehrer auswählen" autocomplete="off" autocomplete="off">
+                    <select name="teacherIds[]" required multiple data-placeholder="Lehrer auswählen" autocomplete="off">
                         {{#each teachers}}
                             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                                 {{#if this.displayName}}
@@ -102,7 +102,7 @@
 
                 <div class="form-group col-md-6">
                     <label>Vertretungslehrer - Optional</label>
-                    <select name="substitutionIds[]" multiple data-placeholder="Lehrer auswählen" autocomplete="off" autocomplete="off">
+                    <select name="substitutionIds[]" multiple data-placeholder="Lehrer auswählen" autocomplete="off">
                         {{#each substitutions}}
                             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                                 {{this.firstName}} {{this.lastName}}
@@ -186,7 +186,7 @@
               <div class="form-group">
                   <label>Klasse(n) (Alle Schüler der Klasse werden automatisch hinzugefügt!) - Optional</label>
 
-                  <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen" autocomplete="off">
+                  <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
                       {{#each classes}}
                           <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                               {{log this.year}}
@@ -209,7 +209,7 @@
               <div class="form-group">
                   <label>Schüler / Teilnehmer - Optional</label>
 
-                  <select name="userIds[]" multiple data-placeholder="Schüler auswählen" autocomplete="off">
+                  <select name="userIds[]" multiple data-placeholder="Schüler auswählen">
                       {{#each students}}
                           <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                               {{#if this.displayName}}
