fix weird full-size table border

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -304,7 +304,7 @@ form.inline {
 	h3 {font-size: 1.1rem;font-style:italic;text-decoration:underline}
 	p  {font-size: 1rem;margin-bottom:.25rem;}
 	img, video{max-width: 100%;}
-	table{display: block; max-width:100%; overflow: auto;}
+	table{display: table; max-width:100%; overflow: auto;}
 	blockquote{
 	  color: grey;
 	  margin-left: 1rem;
