PR review changes

--- a/views/teams/overview-empty.hbs
+++ b/views/teams/overview-empty.hbs
@@ -11,9 +11,9 @@
         <section class="empty-state">
             <img src="/images/empty-states/teams.svg" alt="Team von Lehrern" class="image mx-auto d-block"/>
             <div class="text-wrapper mx-auto d-block">
-                <h2 class="text-center">Mit Teams Schule vernetzen</h2>
+                <h2 class="text-center">Teams vernetzen Schule</h2>
                 <h3 class="h5 text-muted text-center">
-                    Lege ein Team in der {{theme.title}} an, um Material und Neuigkeiten zwischen Mitgliedern auszutauschen.
+                    Lege ein Team an, um Material und Neuigkeiten zwischen Mitgliedern außerhalb von Kursen auszutauschen.
                 </h3>
             </div>
             {{#userHasPermission "TEAM_EDIT"}}
